syntax = "proto3";
package librevault.protocol;

message Handshake {
	bytes auth_token = 1;
	string device_name = 2;
	string user_agent = 3;
	repeated string extensions = 4;
}

message HaveMeta {
	bytes path_id = 1;
	int64 revision = 2;
	bytes bitfield = 3;
}

message HaveChunk {
	bytes ct_hash = 1;
}

message MetaRequest {
	bytes path_id = 1;
	int64 revision = 2;
}

message MetaReply {
	bytes meta = 1;
	bytes signature = 2;
	bytes bitfield = 3;
}

message BlockRequest {
	bytes ct_hash = 1;
	uint32 offset = 2;
	uint32 length = 3;
}

message BlockReply {
	bytes ct_hash = 1;
	uint32 offset = 2;
	bytes content = 3;
}
